8 April 2008: Wouter
	- unbound tries to set the ulimit fds when started as server.
	  if that does not work, it will scale back its requirements.

27 March 2008: Wouter
	- documented /dev/random symlink from chrootdir as FAQ entry.

26 March 2008: Wouter
	- implemented AD bit signaling. If a query sets AD bit (but not DO)
	  then the AD bit is set in the reply if the answer validated.
	  Without including DNSSEC signatures. Useful if you have a trusted
	  path from the client to the resolver. Follows dnssec-updates draft.

25 March 2008: Wouter
	- implemented check that for NXDOMAIN and NOERROR answers a query
	  section must be present in the reply (by the scrubber). And it must
	  be equal to the question sent, at least lowercase folded.
	  Previously this feature happened because the cache code refused
	  to store such messages. However blocking by the scrubber makes 
	  sure nothing gets into the RRset cache. Also, this looks like a
	  timeout (instead of an allocation failure) and this retries are
	  done (which is useful in a spoofing situation).
	- RTT banding. Band size 400 msec, this makes band around zero (fast)
	  include unknown servers. This makes unbound explore unknown servers.

7 March 2008: Wouter
	- -C config feature for harvest program. 
	- harvest handles CNAMEs too.

5 March 2008: Wouter
	- patch from Hugo Koji Kobayashi for iterator logs spelling.

4 March 2008: Wouter
	- From report by Jinmei Tatuya, rfc2181 trust value for remainder
	  of a cname trust chain is lower; not full answer_AA. 
	- test for this fix.
	- default config file location is /usr/local/etc/unbound.
	  Thus prefix is used to determine the location. This is also the
	  chroot and pidfile default location.

3 March 2008: Wouter
	- Create 0.10 svn tag.
	- 0.11 version in trunk.
	- indentation nicer.

29 February 2008: Wouter
	- documentation update.
	- fixup port to Solaris of perf test tool.
	- updated ldns-tarball with decl-after-statement fixes.

28 February 2008: Wouter