@@ -1,3 +1,9 @@
+9 April 2008: Wouter
+	- configure can detect libev(from its build directory) when passed
+	  --with-libevent=/home/wouter/libev-3.2
+	  libev-3.2 is a little faster than libevent-1.4.3-stable (about 5%).
+	- unused commpoints not listed in epoll list.
+
 8 April 2008: Wouter
 	- unbound tries to set the ulimit fds when started as server.
 	  if that does not work, it will scale back its requirements.
